# compphys-4

./: README.md  pyproject.toml
src/report1/: prob1-1.py  prob1-2.py  report.typ  src1.py  src2.py  src3.py
src/report2/: .gitignore  lj.c  msd2d.py  plot.py  report.typ  result.csv
